Fix border radius on iOS

--- a/projects/DigitPop-Player/src/app/video/video.component.scss
+++ b/projects/DigitPop-Player/src/app/video/video.component.scss
@@ -697,6 +697,8 @@
   width: 48px;
   height: 48px;
   border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
 }
 
 .coin-shine:after {
